--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -21,6 +21,10 @@
   background: #ddd9e0;
 }
 
+.projectLogo {
+  display: block;
+}
+
 
 @media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
 }
